更新 AM-v1.0.html
修复词库无法正常显示的bug

--- a/AM-v1.0.html
+++ b/AM-v1.0.html
@@ -609,8 +609,9 @@
             let details = {};
             
             for (let key in localStorage) {
-                const value = localStorage[key];
-                const size = key.length + value.length;
+         const value = localStorage.getItem(key); 
+
+         const size = key.length + (value ? value.length : 0);
                 totalSize += size;
                 
                 // 识别是哪种数据
