更新 AM-v1.0.html
更新explanation = w.explanation，修复重回进度掉解释的问题

--- a/AM-v1.0.html
+++ b/AM-v1.0.html
@@ -461,6 +461,7 @@
                 wordStates: activeWords.map(w => ({
                     chinese: w.chinese,
                     arabic: w.arabic,
+                    explanation: w.explanation,
                     rememberedCount: w.rememberedCount,
                     cooldown: w.cooldown,
                     mistakeCount: w.mistakeCount || 0
