检查更新功能
更新 UpdateCheck 功能
通过对比android-version内的数值进行检查

--- a/index.html
+++ b/index.html
@@ -123,9 +123,13 @@
             <button id="clear-data-btn" class="btn" style="background-color: #f44336; width: 80%; margin: 0.6rem auto;">
                 🗑️ 清除所有数据
             </button>
+            <p style="text-align: center; margin-top: 1rem;">
+                <a id="check-updates-link" href="#" style="color: #00897b; font-weight: bold; text-decoration: none;">🔄 检查更新</a>
+            </p>
         </div>
     </div>
 
+    <script src="js/Update.js"></script>
     <script type="module" src="js/main.js"></script>
 
 </body>
