--- a/index.html
+++ b/index.html
@@ -30,6 +30,27 @@
                 </label>
             </div>
             <!-- 其他设置项可以放在这里 -->
+            <div id="data-management-section" style="margin-top: 1.5rem; padding-top: 1.5rem; border-top: 1px solid #e0e0e0; text-align: center;">
+                <h3 style="color: #37474f; margin-bottom: 1rem;">数据管理</h3>
+                <button id="view-stats-btn" class="btn" style="background-color: #673ab7; width: 80%; margin: 0.6rem auto; display: block;">
+                    📊 查看学习统计
+                </button>
+                <button id="export-backup-btn" class="btn" style="background-color: #00897b; width: 80%; margin: 0.6rem auto; display: block;">
+                    💾 导出备份文件
+                </button>
+                <button id="import-backup-btn" class="btn" style="background-color: #1976d2; width: 80%; margin: 0.6rem auto; display: block;">
+                    📂 导入备份文件
+                </button>
+                <button id="check-storage-btn" class="btn" style="background-color: #ff6f00; width: 80%; margin: 0.6rem auto; display: block;">
+                    💿 查看存储空间
+                </button>
+                <button id="clear-data-btn" class="btn" style="background-color: #f44336; width: 80%; margin: 0.6rem auto; display: block;">
+                    🗑️ 清除所有数据
+                </button>
+                <p style="text-align: center; margin-top: 1rem;">
+                    <a id="check-updates-link" href="#" style="color: #00897b; font-weight: bold; text-decoration: none;">🔄 检查更新</a>
+                </p>
+            </div>
         </div>
     </div>
 
@@ -120,35 +141,6 @@
             <button id="finish-back-to-menu-btn" class="btn" style="background-color: #00695c;">返回菜单</button>
         </div>
         <div style="margin-top: 1.5rem; padding-top: 1.5rem; border-top: 1px solid #e0e0e0;">
-            <h3 style="color: #37474f; margin-bottom: 1rem;">数据管理</h3>
-
-            <!-- 第一行按钮 -->
-            <button id="view-stats-btn" class="btn" style="background-color: #673ab7; width: 80%; margin: 0.6rem auto;">
-                📊 查看学习统计
-            </button>
-
-            <!-- 第二行按钮 -->
-            <button id="export-backup-btn" class="btn" style="background-color: #00897b; width: 80%; margin: 0.6rem auto;">
-                💾 导出备份文件
-            </button>
-
-            <!-- 第三行按钮 -->
-            <button id="import-backup-btn" class="btn" style="background-color: #1976d2; width: 80%; margin: 0.6rem auto;">
-                📂 导入备份文件
-            </button>
-
-            <!-- 第四行按钮 -->
-            <button id="check-storage-btn" class="btn" style="background-color: #ff6f00; width: 80%; margin: 0.6rem auto;">
-                💿 查看存储空间
-            </button>
-
-            <!-- 第五行按钮（危险操作） -->
-            <button id="clear-data-btn" class="btn" style="background-color: #f44336; width: 80%; margin: 0.6rem auto;">
-                🗑️ 清除所有数据
-            </button>
-            <p style="text-align: center; margin-top: 1rem;">
-                <a id="check-updates-link" href="#" style="color: #00897b; font-weight: bold; text-decoration: none;">🔄 检查更新</a>
-            </p>
         </div>
     </div>
 
