--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         </div>
     </div>
 
-    <script src="js/Update.js"></script>
+    <script src="js/update.js"></script>
     <script type="module" src="js/main.js"></script>
 
     <!-- 随机测试配置模态框 -->
