FSRS记忆算法更新1

--- a/index.html
+++ b/index.html
@@ -125,8 +125,9 @@
 
 
             <div id="controls">
-                <button id="remembered-btn" class="btn">记住了</button>
-                <button id="forgot-btn" class="btn">没记住</button>
+                <button id="forgot-btn" class="btn">忘记</button>
+                <button id="hard-btn" class="btn">模糊</button> 
+                <button id="easy-btn" class="btn">记得</button> 
                 <button id="next-word-in-history-btn" class="btn" style="display: none;">下一个词</button>
             </div>
             <div id="nav-controls">
