--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 <div class="settings-section">
                     <h3>规律学习设置</h3>
                     <div class="setting-item">
-                        <label for="daily-review-words">每日复习单词数</label>
+                        <label for="daily-review-words">每日总学习单词数</label>
                         <input type="number" id="daily-review-words" min="0" value="30">
                     </div>
                     <div class="setting-item">
@@ -305,6 +305,9 @@
             <h2>选择学习范围</h2>
             <div id="regular-study-options-container">
                 <!-- 学习选项将由JS动态加载到这里 -->
+            </div>
+            <div class="modal-actions">
+                <button id="regular-study-start-btn" class="btn">开始学习</button>
             </div>
         </div>
     </div>
